# parser_log

./: .env.local.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
src/services/: application.py  config.py  logger_resolver.py  parser.py  publisher.py  reader_processor.py
src/utils/application/: report.py
src/utils/config/: env_loader.py  validator.py
src/utils/logger_resolver/: handlers.py
src/utils/parser/: analytics.py  atom.py  state.py
src/utils/publisher/: template.py
src/utils/reader_processor/: log_file.py  readers.py
tests/fixtures/: nginx-access-ui.log-20170701.txt
tests/services/: test_parser.py
tests/utils/parser/: test_atom.py
tests/utils/reader_processor/: test_log_file.py
