[project]
name = "01-log-parser"
version = "1.0.0"
requires-python = "==3.13.4"
dependencies = [
    "dotenv>=0.9.9",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
pythonpath = ["src"]
addopts = "-v"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-pythonpath>=0.7.3",
]
